# Nojipiz.github.io

./: .gitignore  .prettierrc  CNAME  Cargo.3ba71d50.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  src.91a52b9d.js  static.5a81ed45.js  static.5a81ed45.js.map  static.93a9bd3b.js  static.93a9bd3b.js.map  static.a4946ece.js  static.a4946ece.js.map  static.adcf5025.js  static.adcf5025.js.map  static.f301c962.js  static.f301c962.js.map  styles.3adae015.css  styles.3adae015.css.map  styles.78386fb9.css  styles.78386fb9.css.map  styles.b8f76287.css  styles.b8f76287.css.map  styles.bde577ce.css  styles.bde577ce.css.map  styles.f04d6401.css  styles.f04d6401.css.map  yew_app_bg.26387e33.wasm  yew_app_bg.748e6a84.wasm  yew_app_bg.aa1c829b.wasm  yew_app_bg.b32bafac.wasm  yew_app_bg.c7fd0f67.wasm  yew_app_bg.eb1eb3f7.wasm  yew_app_bg.fb60b6c8.wasm
.github/workflows/: deploy.yml
PROYECTO_TEMP/Games/memory-game/: scripts.js
PROYECTO_TEMP/SEMILLAS/: index.html  package-lock.json  package.json
PROYECTO_TEMP/SEMILLAS/levels/: _style_js.js  bad.mpeg  base.css  common.js  content.css  content.data  contentv3.xml  good.mpeg  historieta_1.html  historieta_2.html  historieta_3.html  index.html  nav.css  nivel_1.html  nivel_2.html  nivel_3.html  (+2 more)
PROYECTO_TEMP/SEMILLAS_DEL_SABER/: actividad_2.html  actividad_4.html  content.data  contentv3.xml  index.html  jugando_y_aprendiendo.html  los_esquimales.html
src/: app.rs  index.ts  lib.rs
src/animations/: donutAnimation.ts  lowPolyMoon.blend  moon.babylon  moonAnimation.ts
src/components/: about.rs  contact.rs  footer.rs  header.rs  home.rs  mod.rs  portfolio.rs
src/fetch/: fetch.rs
src/hooks/: mod.rs  use_current_section.rs
src/languages/: languages.rs
src/resources/: resources.rs
src/routes/: home.rs  main.rs  mod.rs
src/styles/: _base.scss  _include_media.scss  _normalize.scss
static/: index.html  index.ts  styles.css  styles.scss
tests/: lib.rs
(+45 files in other folders)
