[package]
authors = ["Orlando Vargas nojipiz@hotmail.com"]
categories = ["WASM"]
description = "portfolio"
edition = "2021"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/Nojipiz/Nojipiz.github.io"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
log = "0.4.17"
yew = "0.19.3"
yew-router = "0.16.0"
yewdux = "0.7.0"
yewdux-functional = "0.1.0"
yew-hooks = "0.1.56"
serde = "1.0.137"
wasm-bindgen = "=0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = { version = "=0.3.57", features = [
  "Window",
  "Document",
  "DocumentFragment",
  "NodeList",
  "HtmlElement",
] }
js-sys = "=0.3.57"
reqwest = { version = "0.11.11", features = ["json"] }
